# nano_ocr

./: .gitignore  README.md  Untitled.ipynb  Untitled2.ipynb  build_datasets.py  model.ipynb  model_simple.ipynb  pyproject.toml  requirements.txt
artifacts/: aocr_best.pt  aocr_latest.pt  best_ocr_v1.pth
config/: ocr.yaml  ocr_mobilenetv3.yaml
scripts/: build_datasets.py  debug_paddle_result.py  eval.py  generate_synthetic.py  infer_image.py  train.py
ultraocr/: __init__.py  config.py  dataset.py  loss.py  model.py  utils.py
ultraocr/backbones/: __init__.py
