[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultraocr"
version = "0.1.0"
description = "A lightweight OCR model with CTC loss training"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "pillow",
    "scipy",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["ultraocr*"]